cabal-version:      2.4
name:               hasu
version:            0.1.0.0
synopsis:           A Haskell library for osu!

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             KV Le
maintainer:         32186663+kvietcong@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

executable hasu
    main-is:            Main.hs
    other-modules:      User, Score, Beatmap, HasuBase
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base
                 , aeson
                 , http-client
                 , http-conduit
                 , req
                 , api-builder
                 , text
                 , bytestring
                 , utf8-string

library
    exposed-modules: User, Score, Beatmap, HasuBase
    build-depends: base
                 , aeson
                 , http-client
                 , http-conduit
                 , req
                 , api-builder
                 , text
                 , bytestring
                 , utf8-string
    hs-source-dirs:   src
    default-language: Haskell2010
