cabal-version:      2.4
name:               hasu
version:            0.1.0.0
synopsis:           A Haskell library for osu!

-- A longer description of the package.
description: A Haskell library for osu!
homepage: https://github.com/kvietcong/hasu

-- A URL where users can report bugs.
bug-reports:        https://github.com/kvietcong/hasu/issues
license:            NONE
author:             KV Le
maintainer:         32186663+kvietcong@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

executable hasu
    main-is:            Main.hs
    other-modules:      APIv1.User, APIv1.Score, APIv1.Beatmap, APIv1.HasuBase
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src, src/lib
    build-depends: base
                 , aeson
                 , http-client
                 , http-conduit
                 , text
                 , bytestring
                 , utf8-string

library
    exposed-modules: APIv1.User, APIv1.Score, APIv1.Beatmap, APIv1.HasuBase
    build-depends: base
                 , aeson
                 , http-client
                 , http-conduit
                 , text
                 , bytestring
                 , utf8-string
    hs-source-dirs:   src/lib
    default-language: Haskell2010
